<resources>
    <string name="app_name">Kurakani</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="requests">Requests</string>
    <string name="groups">Groups</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="loginButtonText">LOG IN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">user name</string>
    <string name="signUpButtonText">SIGN UP</string>
    <string name="loginExtra">Already have an account?</string>
    <string name="newAccount">Create a new account</string>
    <string name="avatar_pic">avatar pic</string>
    <string name="top_interests">Top Interests</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="logout">logout</string>
</resources>