<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_chat24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_requests"
            android:title="@string/requests" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_groups"
            android:title="@string/groups" />
    </group>
</menu>