<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/signupFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authorization.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".AuthenticationActivity">
            <androidx.cardview.widget.CardView
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:layout_gravity="center"
                app:cardCornerRadius="100sp">

                <ImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/avatar_pic"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/avatar_icon" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8sp"
                android:background="@drawable/edit_txtfield_custom"
                android:padding="8sp"
                android:text="Pick an image" />
            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginVertical="4sp"
                android:layout_marginHorizontal="20dp"
                android:hint="Username"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_user"
                android:background="@drawable/edit_txtfield_custom"
                />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="4sp"
                android:background="@drawable/edit_txtfield_custom"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="4sp"
                android:background="@drawable/edit_txtfield_custom"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="16dp" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/signUpButtonText"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_custom"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="@string/loginExtra"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginButtonText"
                android:background="@drawable/btn_custom"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

    </FrameLayout>
</layout>